# BayInnoMuc-25

./: .gitignore  README.md  SETUP.md  i18n.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  not-found.tsx
app/[locale]/: layout.tsx  not-found.tsx  page.tsx
app/[locale]/chat/text/: page.tsx
app/api/chat/text/: route.ts
app/api/chat/voice/synthesize/: route.ts
app/api/chat/voice/transcribe/: route.ts
app/api/faq/search/: route.ts
app/api/session/: route.ts
app/api/token/: route.ts
app/chat/text/: page.tsx
app/chat/voice/: page.tsx
backend/: README.md  diagnostic_queries.py  enhanced_vector_populator.py  main.py  pdf_vector_populator.py  pyproject.toml  requirements.txt  scrape_faqs_simple.py  test_knowledge_base.py  voice_agent.py
backend/app/routers/: chat.py  faq.py  session.py
backend/app/services/: chat_service.py  faq_service.py  voice_service.py
backend/database/: chroma.sqlite3
backend/hiv_faqs/: FAQ_Liste.json  faq_hiv_test.json  faq_prep.json
components/: ChatOptions.tsx  FAQSection.tsx  Hero.tsx  LanguageSelector.tsx  Layout.tsx  LoadingSpinner.tsx  TextChatInterface.tsx  VoiceChatInterface.tsx
components/ui/: accordion.tsx  button.tsx  input.tsx
i18n/: routing.ts
lib/: config.ts
lib/backend/: chatService.ts  faqService.ts  faqServiceMultilingual.ts  voiceService.ts
messages/: de.json  en.json  fr.json  tr.json  uk.json
