[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "livekit>=1.0.20",
    "livekit-plugins-deepgram>=1.3.6",
    "livekit-plugins-elevenlabs>=1.3.6",
    "livekit-plugins-openai>=1.3.6",
    "livekit-plugins-silero>=1.3.6",
    "livekit-plugins-turn-detector>=1.3.6",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]
